--- a/usuarios_app/templates/index.html
+++ b/usuarios_app/templates/index.html
@@ -80,7 +80,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Contraseña</label>
-                        <input type="password" class="form-control" id="password" name="password">
+                        <input type="password" class="form-control" id="password" name="password" placeholder="Contraseña">
                     </div>
                     <input class="btn btn-primary" type="submit" value="Login">
                 </form>
