--- a/usuarios_app/templates/index.html
+++ b/usuarios_app/templates/index.html
@@ -62,7 +62,7 @@
 
             </div>
             <div class="col-md-4">
-                <h1>LOGIN</h1>
+                <h1>LOGINNNN</h1>
                 {% with messages = get_flashed_messages(category_filter=['login']) %}
                 {% if messages %}
                 <div class="alert alert-danger" role="alert">
